--- a/app/src/main/res/layout/layout_product_info_page_two.xml
+++ b/app/src/main/res/layout/layout_product_info_page_two.xml
@@ -41,7 +41,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="Milk"
+        android:hint="Drink"
         android:inputType="textPersonName"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:layout_width="0dp"
         android:layout_height="43dp"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Type:"
+        android:text="Subcategory:"
         android:textAlignment="viewEnd"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/editText2"
