--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="128dp"
     android:fitsSystemWindows="true"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/main._appBar_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -14,8 +14,7 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:title="@string/app_name">
 
-    </android.support.v7.widget.Toolbar>
-
+    </androidx.appcompat.widget.Toolbar>
     <!--<android.support.design.widget.CollapsingToolbarLayout
         android:id="@+id/main._appBar_toolbarL"
         android:layout_width="match_parent"
@@ -29,4 +28,4 @@
 
 
     </android.support.design.widget.CollapsingToolbarLayout>-->
-</android.support.design.widget.AppBarLayout>
+</com.google.android.material.appbar.AppBarLayout>
