--- a/app/src/main/res/layout/layout_prod_registry_pagination.xml
+++ b/app/src/main/res/layout/layout_prod_registry_pagination.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.viewpager.widget.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/layout_product_pager">
 
-    <view
+    <!--<view
         android:id="@+id/pagePositionSignal"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
 
-    </view>
+    </view>-->
+    <androidx.viewpager.widget.PagerTitleStrip
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-</android.support.v4.view.ViewPager>
+</androidx.viewpager.widget.ViewPager>
