--- a/app/src/main/res/layout/layout_store_manager_registry.xml
+++ b/app/src/main/res/layout/layout_store_manager_registry.xml
@@ -1,6 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:showIn="@layout/layout_store_manager_profile">
+
+    <TextView
+        android:id="@+id/shopperProfileHeader"
+        android:layout_width="0dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="center_vertical"
+        android:text="Manager profile information"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/label_ShopperTitle"
+        android:layout_width="56dp"
+        android:layout_height="0dp"
+        android:gravity="center_vertical"
+        android:text="Title:"
+        android:textAlignment="viewEnd"
+        app:layout_constraintBottom_toBottomOf="@+id/spinner_ManagerTitle"
+        app:layout_constraintStart_toStartOf="@+id/shopperProfileHeader"
+        app:layout_constraintTop_toTopOf="@+id/spinner_ManagerTitle" />
+
+    <Spinner
+        android:id="@+id/spinner_ManagerTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:dropDownWidth="wrap_content"
+        android:entries="@array/user_profile_titles"
+        app:layout_constraintEnd_toEndOf="@+id/shopperProfileHeader"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/label_ShopperTitle"
+        app:layout_constraintTop_toBottomOf="@+id/shopperProfileHeader" />
+
+    <EditText
+        android:id="@+id/managerName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:ems="10"
+        android:hint="First name"
+        android:inputType="textPersonName"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/shopperProfileHeader"
+        app:layout_constraintStart_toStartOf="@+id/shopperProfileHeader"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_ManagerTitle" />
+
+    <EditText
+        android:id="@+id/managerSurname"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Last name"
+        android:inputType="textPersonName"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/managerName"
+        app:layout_constraintStart_toStartOf="@+id/managerName"
+        app:layout_constraintTop_toBottomOf="@+id/managerName" />
+
+    <EditText
+        android:id="@+id/managerPhone"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="(+258)"
+        android:inputType="textPhonetic"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/managerName"
+        app:layout_constraintStart_toStartOf="@+id/managerName"
+        app:layout_constraintTop_toBottomOf="@+id/managerSurname" />
+
+    <EditText
+        android:id="@+id/managerEmail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:ems="10"
+        android:hint="manager@store.com"
+        android:inputType="textEmailAddress"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/managerName"
+        app:layout_constraintStart_toStartOf="@+id/managerName"
+        app:layout_constraintTop_toBottomOf="@+id/managerPhone" />
+
+    <Button
+        android:id="@+id/shopperProfileSaver"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="submit"
+        app:layout_constraintEnd_toEndOf="@+id/shopperProfileHeader"
+        app:layout_constraintTop_toBottomOf="@+id/managerEmail" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
