--- a/app/src/main/res/menu/manager_menu.xml
+++ b/app/src/main/res/menu/manager_menu.xml
@@ -3,17 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/userCatogue"
-        android:icon="@drawable/ic_list_24px"
+        android:id="@+id/menu._action_userCatogue"
+        android:icon="@drawable/ic_store_black_24dp"
         android:title="My Store"
         app:showAsAction="never" />
     <item
-        android:id="@+id/storePromo"
-        android:icon="@android:drawable/ic_popup_reminder"
-        android:title="My Ads" />
+        android:id="@+id/menu._action_storePromo"
+        android:icon="@drawable/ic_notifications_none_black_24dp"
+        android:title="Notifications"
+        android:visible="false" />
     <item
-        android:id="@+id/userProfile"
-        android:icon="@drawable/ic_person_24px"
+        android:id="@+id/menu._action_userProfile"
+        android:icon="@drawable/ic_person_outline_black_24dp"
         android:title="My Profile"
+        android:visible="true"
         app:showAsAction="never" />
 </menu>
