--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -18,4 +18,11 @@
         <item>MT</item>
         <item>USD</item>
     </string-array>
+
+    <string-array name="user_profile_titles">
+        <item>Mrs.</item>
+        <item>Miss</item>
+        <item>Mr.</item>
+        <item>Sr.</item>
+    </string-array>
 </resources>
