--- a/app/src/main/res/menu/manager_menu.xml
+++ b/app/src/main/res/menu/manager_menu.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu._action_userCatogue"
+        android:id="@+id/menu._action_storeCatalogue"
         android:icon="@drawable/ic_store_black_24dp"
         android:title="My Store"
         app:showAsAction="never" />
     <item
-        android:id="@+id/menu._action_storePromo"
+        android:id="@+id/menu._action_userNotify"
         android:icon="@drawable/ic_notifications_none_black_24dp"
         android:title="Notifications"
-        android:visible="false" />
+        android:visible="true" />
     <item
         android:id="@+id/menu._action_userProfile"
         android:icon="@drawable/ic_person_outline_black_24dp"
