First commit...master

--- a/app/src/main/res/layout/layout_store_single_category.xml
+++ b/app/src/main/res/layout/layout_store_single_category.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/linearLayout"
+            android:id="@+id/singleCategoryHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:layout_constraintTop_toBottomOf="@+id/singleCategoryHeader"
             tools:itemCount="4"
             tools:listitem="@layout/layout_product_mini_desc" />
 
