--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,17 @@
 
     </include>
 
-    <FrameLayout
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/fragments_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inc_layout_store_products_searcher" />
+        app:layout_constraintTop_toBottomOf="@+id/inc_layout_store_products_searcher">
+
+    </androidx.core.widget.NestedScrollView>
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
@@ -31,11 +34,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-
-        app:menu="@menu/manager_menu"
         app:layout_constraintStart_toStartOf="parent">
-
-
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 
