--- a/app/src/main/res/menu-port/manager_menu.xml
+++ b/app/src/main/res/menu-port/manager_menu.xml
@@ -4,17 +4,21 @@
 
     <item
         android:id="@+id/storeCatalogue"
+        android:enabled="true"
         android:icon="@drawable/ic_store_black_24dp"
         android:title="My Store"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/userNotify"
+        android:enabled="true"
         android:icon="@drawable/ic_notifications_none_black_24dp"
         android:title="Notifications"
-        android:visible="true" />
+        android:visible="true"
+        app:showAsAction="always" />
     <item
         android:id="@+id/userProfile"
+        android:enabled="true"
         android:icon="@drawable/ic_person_outline_black_24dp"
         android:title="My Profile"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
