--- a/app/src/main/res/menu/manager_menu.xml
+++ b/app/src/main/res/menu/manager_menu.xml
@@ -4,18 +4,22 @@
 
     <item
         android:id="@+id/menu._action_storeCatalogue"
+        android:enabled="true"
         android:icon="@drawable/ic_store_black_24dp"
         android:title="My Store"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/menu._action_userNotify"
+        android:enabled="true"
         android:icon="@drawable/ic_notifications_none_black_24dp"
         android:title="Notifications"
-        android:visible="true" />
+        android:visible="true"
+        app:showAsAction="always" />
     <item
         android:id="@+id/menu._action_userProfile"
+        android:enabled="true"
         android:icon="@drawable/ic_person_outline_black_24dp"
         android:title="My Profile"
         android:visible="true"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
